--- a/src/mongo/db/pipeline/plugin/BUILD.bazel
+++ b/src/mongo/db/pipeline/plugin/BUILD.bazel
@@ -1,5 +1,14 @@
-cc_library(
+load("//bazel:mongo_src_rules.bzl", "mongo_cc_library")
+
+mongo_cc_library(
     name = "api",
-    hdrs = ["api.h"],
-    srcs = ["api.cpp"],
+    hdrs = [
+        "api.h",
+        "document_source_plugin.h"
+    ],
+    srcs = [
+        "api.cpp",
+        "document_source_plugin.cpp"
+    ],
+    deps = ["//src/mongo/db/pipeline",]
 )
