move plugin documentsource to the main pipeline lib

--- a/src/mongo/db/pipeline/BUILD.bazel
+++ b/src/mongo/db/pipeline/BUILD.bazel
@@ -483,6 +483,7 @@ mongo_cc_library(
         "document_source_operation_metrics.cpp",
         "document_source_out.cpp",
         "document_source_plan_cache_stats.cpp",
+        "document_source_plugin.cpp",
         "document_source_project.cpp",
         "document_source_query_stats.cpp",
         "document_source_queue.cpp",
@@ -590,6 +591,7 @@ mongo_cc_library(
         "document_source_operation_metrics.h",
         "document_source_out.h",
         "document_source_plan_cache_stats.h",
+        "document_source_plugin.h",
         "document_source_project.h",
         "document_source_query_stats.h",
         "document_source_queue.h",
@@ -691,6 +693,7 @@ mongo_cc_library(
         "//src/mongo/db/exec/document_value",
         "//src/mongo/db/fts:base_fts",
         "//src/mongo/db/index:index_access_method",
+        "//src/mongo/db/pipeline/plugin",
         "//src/mongo/db/pipeline/spilling",
         "//src/mongo/db/query:bucket_predicate_generator",
         "//src/mongo/db/query:projection_ast",
